@@ -2330,6 +2330,7 @@ Max Zhou <earthdog at 126 dot com>
 Daynesh Mangal <daynesh at gmail dot com>
 Robert Shectman <shectman at llnl dot gov>
 Rafi <rafi dot net at gmail dot com>
+Kannan Ramaswamy <kannan dot ramaswamy at cogcap dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
